Fixed blur covering page

--- a/src/styles/layout.module.scss
+++ b/src/styles/layout.module.scss
@@ -16,7 +16,7 @@
 	padding: 50px;
 	backdrop-filter: blur(10px);
 	text-align: center;
-	left: -50px;
+	left: -40px;
 	top: -50px;
 }
 
